# py_creatio_connector

./: .gitignore  README.md  creatio.py  pyproject.toml  tests.py
scripts/: poetry_publish.sh
sl_creatio_connector/: __init__.py  constants.py  creatio.py  test_main.py
sl_creatio_connector/tests/: test_create_class.py
tests/: test_create_class.py  test_main.py
