[tool.poetry]
name = "sl-creatio-connector"
version = "0.1.5"
description = "Creatio (aka BPMonline) ODATA API helper"
authors = ["sumarokov-vp <sumarokov.vp@gmail.com>"]
readme = "README.md"
packages = [{include = "sl_creatio_connector"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "sl_creatio_connector",
]
